# codexeverywhereusage

./: .gitignore  README.md  index.html  latest.json  package-lock.json  package.json  updater.py  vite.config.ts
CodexMenuBar.xcodeproj/: project.pbxproj
Scripts/: build_dmg.sh
Sources/: MenuBarView.swift  Models.swift
original_xcode_proj/: .gitignore
original_xcode_proj/Sources/: CodexMenuBarApp.swift  Info.plist
src/: App.tsx  Login.tsx  Update.tsx  storage.ts  styles.css  types.ts  window_manager.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: avatar.tsx
src/utils/: init.ts  storage.ts  updater.ts  window.ts
