[package]
name = "codex-everywhere-menubar"
version = "1.1.0"
description = "Codex Everywhere usage monitor"
authors = ["Codex Everywhere"]
edition = "2021"

[lib]
name = "codex_everywhere_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
window-vibrancy = "0.6"
tauri-plugin-process = "2"
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "s"
